--- a/src/main/resources/db/jdbc.properties
+++ b/src/main/resources/db/jdbc.properties
@@ -6,5 +6,5 @@ jdbc.password=123456
 pool.initialSize=5
 pool.maxTotal=100
 pool.maxIdle=30
-pool.maxWait=1000
+pool.maxWaitMillis=1000
 pool.defaultAutoCommit=false
