--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>6.0.2</version>
+			<version>5.1.38</version>
 		</dependency>
 
 		<!-- json -->
@@ -77,7 +77,18 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.7.4</version>
 		</dependency>
+
+		<!-- 辅助模块 -->
+		<dependency>
+			<groupId>com.gdwii</groupId>
+			<artifactId>tool4java</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+
 	</dependencies>
+
+
+
 
 	<build>
 		<plugins>
