--- a/src/main/resources/db/jdbc.properties
+++ b/src/main/resources/db/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/alading?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/persimmon?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=123456
 
